--- a/email.css
+++ b/email.css
@@ -18,7 +18,7 @@
     position: fixed;
     inset: 20px 0 20px 20px;
     width: 75px;
-    min-height: 100vh;
+    height: 100vh;
     background: lightblue;
     transition: 0.5s;
     display: flex;
