--- a/email.css
+++ b/email.css
@@ -22,7 +22,7 @@
     background: lightblue;
     transition: 0.5s;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-radius: 10px;
     margin-right: 30px;
