--- a/email.css
+++ b/email.css
@@ -8,7 +8,7 @@
 }
 .welcome{
     display: flex;
-    width: 1366px;
+    width: 100%;
     height: 100%;
     background: lightcyan;
     justify-content: space-between;
@@ -18,14 +18,15 @@
     position: fixed;
     inset: 20px 0 20px 20px;
     width: 75px;
-    height: 100vh;
+    height:100%;
     background: lightblue;
     transition: 0.5s;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
     border-radius: 10px;
     margin-right: 30px;
+    padding-top:6% ;
 }
 .navigation.open {
     width: 250px;
@@ -71,6 +72,7 @@
      box-shadow: none;
  }
  .navigation ul {
+
      display: flex;
      flex-direction: column;
      gap: 10px;
@@ -186,7 +188,8 @@
   .left1 ion-icon, .right1 ion-icon{
       display:inline-block;
       color: #222;
-
+      font-size: 1.1em;
+      transition: 0.5s;
       margin-right: 25px;
   }
   #left1{
@@ -237,15 +240,16 @@
       height: 18px;
       width: 18px;
   }
-  ion-icon:hover{
-      border-radius: 50px;
-      height: 25px;
-      width: 25px;
-      transition: all 0.3s ease;
-      background-color: #73787d;
-      position: relative;
+  a{
+      text-decoration: none;
   }
 
+  ion-icon:hover{
+      cursor:pointer;
+  }
+ .list{
+     float: right;
+ }
 
 
 
